fix: padding of API pages on mobile (#459)

--- a/theme/index.scss
+++ b/theme/index.scss
@@ -17,15 +17,8 @@
   }
 }
 
-@media (max-width: 640px) {
-  .rspress-home-hero-image {
-    width: 160px;
-  }
-
-  .overview-index {
-    padding: 0px 2px;
-    margin-top: -8px;
-  }
+.overview-index {
+  padding-top: 48px;
 }
 
 $major-brand-color: #ff351a;
